--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,11 +4,27 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header-main {
   color: white;
   font-size: 50px;
   font-weight: normal;
 }
+
+.header-secondary {
+  color: white;
+  font-weight: 300;
+  font-size: 42px;
+}
+
+.header-sub-header {
+  color: gray;
+  font-weight: 300;
+  font-size: 21px;
+}
+
+/* LINKS */
 
 .link-cta {
   font-size: 16px;
